--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<link href="manifest.json" rel="manifest.json"/>
+	<link href="manifest.json" rel="manifest"/>
 	<link href="css/styles.css" rel="stylesheet"/>
 	<meta charset="utf-8" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no" name="viewport"/>
   </head>
