--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<link href="manifest.json" rel="manifest"/>
+	<link href="manifest.json" rel="manifest.json"/>
+	<link href="css/icon.css" rel="stylesheet"/>
 	<link href="css/styles.css" rel="stylesheet"/>
 	<meta charset="utf-8" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no" name="viewport"/>
   </head>
   <body>
 	<div class="Toolbar">
-	  <a onclick="createPlain();">⬛</a>
-	  <a onclick="createTriangle();" style="-webkit-transform: rotateZ(90deg);">◀</a>
+	  <a class="material-icons">crop_square</a>
+	  <a class="material-icons">change_history</a>
+	  <a class="material-icons">signal_cellular_null</a>
+	  <a class="material-icons">texture</a>
 	</div>
-	<div class="Renderer"></div>
-	<div id="TriangleMask" style="display: none;">
-	  0px 50px,
-	  50px 50px,
-	  25px 0px
+	<div class="Renderer">
+	  gjj
 	</div>
   </body>
   <script src="js/Veda.js"></script>
